--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Professional CV</title>
+    <title>Akshay Tamrakar CV</title>
 
     <style>
       body {
@@ -193,25 +193,37 @@
       <!-- SUMMARY -->
       <h2>Professional Summary</h2>
       <p>
-        A results-driven and detail-oriented Full Stack Web Developer with
-        extensive experience in backend development, cloud operations, API
-        engineering, Android development, and IT infrastructure management.
-        Skilled in building scalable, secure, and performance-optimized web
-        applications using CodeIgniter, PHP, MySQL, and modern frontend
-        technologies. Proven success in managing healthcare CRMs, enterprise
-        dashboards, and cloud-based ERP solutions. Strong problem-solving
-        ability with a commitment to delivering high-quality digital products
-        for global clients.
+        A highly skilled and results-driven Full Stack Web Developer with over
+        <b>7 years of experience in the tech industry</b>, including<b>
+          5 years of expertise in coding</b
+        >. Proficient in backend development, cloud operations, API engineering,
+        Android development, and IT infrastructure management. Adept at building
+        scalable, secure, and performance-optimized web applications.
+        Experienced in using modern technologies such as PHP, MySQL, Laravel,
+        CodeIgniter, and frontend tools to deliver high-quality solutions. Known
+        for managing healthcare CRMs, enterprise dashboards, and cloud-based ERP
+        systems. Strong problem-solving skills and a commitment to delivering
+        exceptional digital products for clients worldwide.
       </p>
 
       <!-- SKILLS -->
       <h2>Technical Skills</h2>
       <div class="tags">
-        <span>HTML</span><span>CSS</span><span>JavaScript</span> <span>PHP</span
-        ><span>Core PHP</span><span>CodeIgniter 4</span> <span>MySQL</span
-        ><span>API Development</span> <span>Android (Java/Kotlin)</span
-        ><span>Linux Server</span> <span>Google Cloud</span><span>Figma</span>
-        <span>SEO</span><span>Canva</span>
+        <span>HTML</span>
+        <span>CSS</span>
+        <span>JavaScript</span>
+        <span>PHP</span>
+        <span>Core PHP</span>
+        <span>Laravel</span>
+        <span>CodeIgniter 4</span>
+        <span>MySQL</span>
+        <span>API Development</span>
+        <span>Android (Java/Kotlin)</span>
+        <span>Google Cloud</span>
+        <span>Linux Server</span>
+        <span>Figma</span>
+        <span>Canva</span>
+        <span>SEO</span>
       </div>
 
       <!-- EXPERIENCE -->
