--- a/index.html
+++ b/index.html
@@ -336,163 +336,182 @@
       <div class="portfolio-grid">
         <!-- Project 1 -->
         <div class="project-card">
-          <img src="project1.jpg" alt="Almorix" class="project-image" />
+          <img
+            src="img/rghospitals.png"
+            alt="RG Hospitals"
+            class="project-image"
+          />
           <div class="project-content">
-            <div class="project-title">Almorix</div>
-            <div class="project-type">Website + Admin Dashboard</div>
-            <div class="project-buttons">
-              <a href="https://almorix.com/" target="_blank">Live</a>
-              <button onclick="alert('Download feature coming soon')">
-                Download
-              </button>
+            <div class="project-title">RG Hospitals</div>
+            <div class="project-type">
+              Website + Big Admin Dashboard + Mini CRM
             </div>
-            <div class="share-buttons">
-              <button
-                onclick="navigator.clipboard.writeText('https://almorix.com/')"
-              >
-                🔗
-              </button>
-              <button
-                onclick="window.open('https://www.facebook.com/sharer/sharer.php?u=https://almorix.com/','_blank')"
-              >
-                f
-              </button>
-              <button
-                onclick="window.open('https://twitter.com/intent/tweet?url=https://almorix.com/','_blank')"
-              >
-                t
-              </button>
+            <div class="project-buttons">
+              <a href="https://www.rghospitals.com/" target="_blank">Live</a>
+              <div class="share-buttons">
+                <button
+                  onclick="navigator.clipboard.writeText('https://www.rghospitals.com/')"
+                >
+                  🔗
+                </button>
+                <button
+                  onclick="window.open('https://www.facebook.com/sharer/sharer.php?u=https://www.rghospitals.com/','_blank')"
+                >
+                  f
+                </button>
+                <button
+                  onclick="window.open('https://twitter.com/intent/tweet?url=https://www.rghospitals.com/','_blank')"
+                >
+                  t
+                </button>
+              </div>
             </div>
           </div>
         </div>
         <!-- Project 2 -->
         <div class="project-card">
-          <img src="project2.jpg" alt="Tollanis" class="project-image" />
+          <img src="img/tollanis.png" alt="Tollanis" class="project-image" />
           <div class="project-content">
             <div class="project-title">Tollanis</div>
             <div class="project-type">Website + Admin Dashboard</div>
             <div class="project-buttons">
               <a href="https://tollanis.com/" target="_blank">Live</a>
-              <button onclick="alert('Download feature coming soon')">
-                Download
-              </button>
-            </div>
-            <div class="share-buttons">
-              <button
-                onclick="navigator.clipboard.writeText('https://tollanis.com/')"
-              >
-                🔗
-              </button>
-              <button
-                onclick="window.open('https://www.facebook.com/sharer/sharer.php?u=https://tollanis.com/','_blank')"
-              >
-                f
-              </button>
-              <button
-                onclick="window.open('https://twitter.com/intent/tweet?url=https://tollanis.com/','_blank')"
-              >
-                t
-              </button>
+              <div class="share-buttons">
+                <button
+                  onclick="navigator.clipboard.writeText('https://tollanis.com/')"
+                >
+                  🔗
+                </button>
+                <button
+                  onclick="window.open('https://www.facebook.com/sharer/sharer.php?u=https://tollanis.com/','_blank')"
+                >
+                  f
+                </button>
+                <button
+                  onclick="window.open('https://twitter.com/intent/tweet?url=https://tollanis.com/','_blank')"
+                >
+                  t
+                </button>
+              </div>
             </div>
           </div>
         </div>
         <!-- Project 3 -->
         <div class="project-card">
-          <img src="project3.jpg" alt="IRHPL" class="project-image" />
+          <img src="img/irhpl.png" alt="IRHPL" class="project-image" />
           <div class="project-content">
             <div class="project-title">IRHPL</div>
             <div class="project-type">Website + Admin Dashboard</div>
             <div class="project-buttons">
               <a href="https://irhpl.com/" target="_blank">Live</a>
-              <button onclick="alert('Download feature coming soon')">
-                Download
-              </button>
-            </div>
-            <div class="share-buttons">
-              <button
-                onclick="navigator.clipboard.writeText('https://irhpl.com/')"
-              >
-                🔗
-              </button>
-              <button
-                onclick="window.open('https://www.facebook.com/sharer/sharer.php?u=https://irhpl.com/','_blank')"
-              >
-                f
-              </button>
-              <button
-                onclick="window.open('https://twitter.com/intent/tweet?url=https://irhpl.com/','_blank')"
-              >
-                t
-              </button>
+              <div class="share-buttons">
+                <button
+                  onclick="navigator.clipboard.writeText('https://irhpl.com/')"
+                >
+                  🔗
+                </button>
+                <button
+                  onclick="window.open('https://www.facebook.com/sharer/sharer.php?u=https://irhpl.com/','_blank')"
+                >
+                  f
+                </button>
+                <button
+                  onclick="window.open('https://twitter.com/intent/tweet?url=https://irhpl.com/','_blank')"
+                >
+                  t
+                </button>
+              </div>
             </div>
           </div>
         </div>
         <!-- Project 4 -->
         <div class="project-card">
-          <img src="project4.jpg" alt="Arora Neuro" class="project-image" />
+          <img src="img/anc.png" alt="Arora Neuro" class="project-image" />
           <div class="project-content">
             <div class="project-title">Arora Neuro</div>
             <div class="project-type">Website + Admin Dashboard</div>
             <div class="project-buttons">
               <a href="https://aroraneuro.com/" target="_blank">Live</a>
-              <button onclick="alert('Download feature coming soon')">
-                Download
-              </button>
-            </div>
-            <div class="share-buttons">
-              <button
-                onclick="navigator.clipboard.writeText('https://aroraneuro.com/')"
-              >
-                🔗
-              </button>
-              <button
-                onclick="window.open('https://www.facebook.com/sharer/sharer.php?u=https://aroraneuro.com/','_blank')"
-              >
-                f
-              </button>
-              <button
-                onclick="window.open('https://twitter.com/intent/tweet?url=https://aroraneuro.com/','_blank')"
-              >
-                t
-              </button>
+              <div class="share-buttons">
+                <button
+                  onclick="navigator.clipboard.writeText('https://aroraneuro.com/')"
+                >
+                  🔗
+                </button>
+                <button
+                  onclick="window.open('https://www.facebook.com/sharer/sharer.php?u=https://aroraneuro.com/','_blank')"
+                >
+                  f
+                </button>
+                <button
+                  onclick="window.open('https://twitter.com/intent/tweet?url=https://aroraneuro.com/','_blank')"
+                >
+                  t
+                </button>
+              </div>
             </div>
           </div>
         </div>
         <!-- Project 5 -->
         <div class="project-card">
-          <img src="project5.jpg" alt="OneCX" class="project-image" />
+          <img src="img/polo.png" alt="Polo Elevators" class="project-image" />
           <div class="project-content">
-            <div class="project-title">OneCX</div>
+            <div class="project-title">Polo Elevators</div>
             <div class="project-type">Website + Admin Dashboard</div>
             <div class="project-buttons">
-              <a href="https://onecx.in/" target="_blank">Live</a>
-              <button onclick="alert('Download feature coming soon')">
-                Download
-              </button>
-            </div>
-            <div class="share-buttons">
-              <button
-                onclick="navigator.clipboard.writeText('https://onecx.in/')"
-              >
-                🔗
-              </button>
-              <button
-                onclick="window.open('https://www.facebook.com/sharer/sharer.php?u=https://onecx.in/','_blank')"
-              >
-                f
-              </button>
-              <button
-                onclick="window.open('https://twitter.com/intent/tweet?url=https://onecx.in/','_blank')"
-              >
-                t
-              </button>
+              <a href="https://www.poloelevators.com/" target="_blank">Live</a>
+              <div class="share-buttons">
+                <button
+                  onclick="navigator.clipboard.writeText('https://www.poloelevators.com/')"
+                >
+                  🔗
+                </button>
+                <button
+                  onclick="window.open('https://www.facebook.com/sharer/sharer.php?u=https://www.poloelevators.com/','_blank')"
+                >
+                  f
+                </button>
+                <button
+                  onclick="window.open('https://twitter.com/intent/tweet?url=https://www.poloelevators.com/','_blank')"
+                >
+                  t
+                </button>
+              </div>
             </div>
           </div>
         </div>
         <!-- Project 6 -->
         <div class="project-card">
+          <img src="img/onecx.png" alt="OneCX" class="project-image" />
+          <div class="project-content">
+            <div class="project-title">OneCX</div>
+            <div class="project-type">Website + Admin Dashboard</div>
+            <div class="project-buttons">
+              <a href="https://onecx.in/" target="_blank">Live</a>
+              <div class="share-buttons">
+                <button
+                  onclick="navigator.clipboard.writeText('https://onecx.in/')"
+                >
+                  🔗
+                </button>
+                <button
+                  onclick="window.open('https://www.facebook.com/sharer/sharer.php?u=https://onecx.in/','_blank')"
+                >
+                  f
+                </button>
+                <button
+                  onclick="window.open('https://twitter.com/intent/tweet?url=https://onecx.in/','_blank')"
+                >
+                  t
+                </button>
+              </div>
+            </div>
+          </div>
+        </div>
+        <!-- Project 7 -->
+        <div class="project-card">
           <img
-            src="project6.jpg"
+            src="img/kuka.png"
             alt="Kuka Diagnostics"
             class="project-image"
           />
@@ -501,90 +520,51 @@
             <div class="project-type">Website + Admin Dashboard</div>
             <div class="project-buttons">
               <a href="https://kukadiagnostics.com/" target="_blank">Live</a>
-              <button onclick="alert('Download feature coming soon')">
-                Download
-              </button>
-            </div>
-            <div class="share-buttons">
-              <button
-                onclick="navigator.clipboard.writeText('https://kukadiagnostics.com/')"
-              >
-                🔗
-              </button>
-              <button
-                onclick="window.open('https://www.facebook.com/sharer/sharer.php?u=https://kukadiagnostics.com/','_blank')"
-              >
-                f
-              </button>
-              <button
-                onclick="window.open('https://twitter.com/intent/tweet?url=https://kukadiagnostics.com/','_blank')"
-              >
-                t
-              </button>
-            </div>
-          </div>
-        </div>
-        <!-- Project 7 -->
-        <div class="project-card">
-          <img src="project7.jpg" alt="Polo Elevators" class="project-image" />
-          <div class="project-content">
-            <div class="project-title">Polo Elevators</div>
-            <div class="project-type">Website + Admin Dashboard</div>
-            <div class="project-buttons">
-              <a href="https://www.poloelevators.com/" target="_blank">Live</a>
-              <button onclick="alert('Download feature coming soon')">
-                Download
-              </button>
-            </div>
-            <div class="share-buttons">
-              <button
-                onclick="navigator.clipboard.writeText('https://www.poloelevators.com/')"
-              >
-                🔗
-              </button>
-              <button
-                onclick="window.open('https://www.facebook.com/sharer/sharer.php?u=https://www.poloelevators.com/','_blank')"
-              >
-                f
-              </button>
-              <button
-                onclick="window.open('https://twitter.com/intent/tweet?url=https://www.poloelevators.com/','_blank')"
-              >
-                t
-              </button>
+              <div class="share-buttons">
+                <button
+                  onclick="navigator.clipboard.writeText('https://kukadiagnostics.com/')"
+                >
+                  🔗
+                </button>
+                <button
+                  onclick="window.open('https://www.facebook.com/sharer/sharer.php?u=https://kukadiagnostics.com/','_blank')"
+                >
+                  f
+                </button>
+                <button
+                  onclick="window.open('https://twitter.com/intent/tweet?url=https://kukadiagnostics.com/','_blank')"
+                >
+                  t
+                </button>
+              </div>
             </div>
           </div>
         </div>
         <!-- Project 8 -->
         <div class="project-card">
-          <img src="project8.jpg" alt="RG Hospitals" class="project-image" />
+          <img src="img/almorix.png" alt="Almorix" class="project-image" />
           <div class="project-content">
-            <div class="project-title">RG Hospitals</div>
-            <div class="project-type">
-              Website + Big Admin Dashboard + Mini CRM
-            </div>
+            <div class="project-title">Almorix</div>
+            <div class="project-type">Website + Admin Dashboard</div>
             <div class="project-buttons">
-              <a href="https://www.rghospitals.com/" target="_blank">Live</a>
-              <button onclick="alert('Download feature coming soon')">
-                Download
-              </button>
-            </div>
-            <div class="share-buttons">
-              <button
-                onclick="navigator.clipboard.writeText('https://www.rghospitals.com/')"
-              >
-                🔗
-              </button>
-              <button
-                onclick="window.open('https://www.facebook.com/sharer/sharer.php?u=https://www.rghospitals.com/','_blank')"
-              >
-                f
-              </button>
-              <button
-                onclick="window.open('https://twitter.com/intent/tweet?url=https://www.rghospitals.com/','_blank')"
-              >
-                t
-              </button>
+              <a href="https://almorix.com/" target="_blank">Live</a>
+              <div class="share-buttons">
+                <button
+                  onclick="navigator.clipboard.writeText('https://almorix.com/')"
+                >
+                  🔗
+                </button>
+                <button
+                  onclick="window.open('https://www.facebook.com/sharer/sharer.php?u=https://almorix.com/','_blank')"
+                >
+                  f
+                </button>
+                <button
+                  onclick="window.open('https://twitter.com/intent/tweet?url=https://almorix.com/','_blank')"
+                >
+                  t
+                </button>
+              </div>
             </div>
           </div>
         </div>
