--- a/index.html
+++ b/index.html
@@ -176,6 +176,107 @@
       .share-buttons button:hover {
         background: #094a8f;
       }
+      /* 🔥 MOBILE RESPONSIVE CSS – For screens below 768px */
+      @media screen and (max-width: 768px) {
+        body {
+          padding: 0;
+          background: #eef2f6;
+        }
+
+        .container {
+          width: 92%;
+          margin: 20px auto;
+          padding: 25px;
+          border-radius: 10px;
+        }
+
+        h1 {
+          font-size: 26px;
+          text-align: center;
+        }
+
+        .subheading {
+          font-size: 15px;
+          text-align: center;
+        }
+
+        .contact {
+          text-align: center;
+          font-size: 14px;
+          line-height: 1.5;
+        }
+
+        h2 {
+          font-size: 20px;
+          margin-top: 30px;
+        }
+
+        p,
+        li {
+          font-size: 14px;
+        }
+
+        /* Tags */
+        .tags span {
+          font-size: 13px;
+          padding: 5px 10px;
+        }
+
+        /* Portfolio Grid */
+        .portfolio-grid {
+          grid-template-columns: 1fr; /* Single column */
+          gap: 15px;
+        }
+
+        .project-card {
+          border-radius: 10px;
+        }
+
+        .project-image {
+          height: 160px; /* Reduce height */
+        }
+
+        .project-title {
+          font-size: 16px;
+        }
+
+        .project-type {
+          font-size: 13px;
+        }
+
+        .project-buttons {
+          flex-direction: column; /* Button vertical stack */
+        }
+
+        .project-buttons a,
+        .project-buttons button {
+          font-size: 13px;
+          padding: 7px;
+          /* width: 100%; */
+        }
+
+        .project-card {
+          position: relative;
+        }
+
+        .share-buttons {
+          position: absolute;
+          top: 10px;
+          right: 10px;
+          background: rgba(0, 0, 0, 0.4);
+          padding: 6px;
+          border-radius: 8px;
+        }
+
+        .share-buttons button {
+          background: white;
+          color: #0b66c3;
+        }
+
+        .footer {
+          font-size: 12px;
+        }
+      }
     </style>
   </head>
 
