--- a/index.html
+++ b/index.html
@@ -322,6 +322,9 @@
         <span>Android (Java/Kotlin)</span>
         <span>Google Cloud</span>
         <span>Linux Server</span>
+        <span>WordPress</span>
+        <span>Spotify</span>
+        <span>Wix</span>
         <span>Figma</span>
         <span>Canva</span>
         <span>SEO</span>
@@ -682,3 +685,4 @@
     </div>
   </body>
 </html>
+
