--- a/index.html
+++ b/index.html
@@ -556,6 +556,217 @@
             </div>
           </div>
         </div>
+
+                <!-- Project  -->
+        <div class="project-card">
+          <img src="img/protense.png" alt="Protense" class="project-image" />
+          <div class="project-content">
+            <div class="project-title">Protense</div>
+            <div class="project-type">Ecom Website + Admin Dashboard</div>
+            <div class="project-buttons">
+              <a href="https://protense.in/" target="_blank">Live</a>
+              <div class="share-buttons">
+                <button
+                  onclick="navigator.clipboard.writeText('https://protense.in/')"
+                >
+                  🔗
+                </button>
+                <button
+                  onclick="window.open('https://www.facebook.com/sharer/sharer.php?u=https://protense.in/','_blank')"
+                >
+                  f
+                </button>
+                <button
+                  onclick="window.open('https://twitter.com/intent/tweet?url=https://protense.in/','_blank')"
+                >
+                  t
+                </button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+             
+      <!-- Project  -->
+        <div class="project-card">
+          <img src="img/badami.png" alt="Badami Sweets" class="project-image" />
+          <div class="project-content">
+            <div class="project-title">Badami Sweets</div>
+            <div class="project-type">Ecom Website + Admin Dashboard</div>
+            <div class="project-buttons">
+              <a href="http://24.199.113.101/projects/badami/" target="_blank">Live</a>
+              <div class="share-buttons">
+                <button
+                  onclick="navigator.clipboard.writeText('http://24.199.113.101/projects/badami/')"
+                >
+                  🔗
+                </button>
+                <button
+                  onclick="window.open('https://www.facebook.com/sharer/sharer.php?u=http://24.199.113.101/projects/badami/','_blank')"
+                >
+                  f
+                </button>
+                <button
+                  onclick="window.open('https://twitter.com/intent/tweet?url=http://24.199.113.101/projects/badami/','_blank')"
+                >
+                  t
+                </button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+       <!-- Project  -->
+        <div class="project-card">
+          <img src="img/dod.png" alt="Decade of Design" class="project-image" />
+          <div class="project-content">
+            <div class="project-title">Decade of Design</div>
+            <div class="project-type">Ecom Website + Admin Dashboard</div>
+            <div class="project-buttons">
+              <a href="http://24.199.113.101/projects/dod/" target="_blank">Live</a>
+              <div class="share-buttons">
+                <button
+                  onclick="navigator.clipboard.writeText('http://24.199.113.101/projects/dod/')"
+                >
+                  🔗
+                </button>
+                <button
+                  onclick="window.open('https://www.facebook.com/sharer/sharer.php?u=http://24.199.113.101/projects/dod/','_blank')"
+                >
+                  f
+                </button>
+                <button
+                  onclick="window.open('https://twitter.com/intent/tweet?url=http://24.199.113.101/projects/dod/','_blank')"
+                >
+                  t
+                </button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+
+             <!-- Project  -->
+        <div class="project-card">
+          <img src="img/ayka.png" alt="Ayka Medical Hospitals" class="project-image" />
+          <div class="project-content">
+            <div class="project-title">Ayka Medical Hospitals</div>
+            <div class="project-type">Informative + Admin Dashboard</div>
+            <div class="project-buttons">
+              <a href="https://aykamedical.com/" target="_blank">Live</a>
+              <div class="share-buttons">
+                <button
+                  onclick="navigator.clipboard.writeText('https://aykamedical.com/')"
+                >
+                  🔗
+                </button>
+                <button
+                  onclick="window.open('https://www.facebook.com/sharer/sharer.php?u=https://aykamedical.com/','_blank')"
+                >
+                  f
+                </button>
+                <button
+                  onclick="window.open('https://twitter.com/intent/tweet?url=https://aykamedical.com/','_blank')"
+                >
+                  t
+                </button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+                   <!-- Project  -->
+        <div class="project-card">
+          <img src="img/motherland.png" alt="Motherland Hospital" class="project-image" />
+          <div class="project-content">
+            <div class="project-title">Motherland Hospital</div>
+            <div class="project-type">Informative + Admin Dashboard</div>
+            <div class="project-buttons">
+              <a href="http://139.59.91.109/projects/motherland/public/" target="_blank">Live</a>
+              <div class="share-buttons">
+                <button
+                  onclick="navigator.clipboard.writeText('http://139.59.91.109/projects/motherland/public/')"
+                >
+                  🔗
+                </button>
+                <button
+                  onclick="window.open('https://www.facebook.com/sharer/sharer.php?u=http://139.59.91.109/projects/motherland/public/','_blank')"
+                >
+                  f
+                </button>
+                <button
+                  onclick="window.open('https://twitter.com/intent/tweet?url=http://139.59.91.109/projects/motherland/public/','_blank')"
+                >
+                  t
+                </button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+                   <!-- Project  -->
+        <div class="project-card">
+          <img src="img/resotica.png" alt="Resotica Heights" class="project-image" />
+          <div class="project-content">
+            <div class="project-title">Resotica Heights</div>
+            <div class="project-type">Informative + Admin Dashboard</div>
+            <div class="project-buttons">
+              <a href="http://24.199.113.101/projects/resotica/" target="_blank">Live</a>
+              <div class="share-buttons">
+                <button
+                  onclick="navigator.clipboard.writeText('http://24.199.113.101/projects/resotica/')"
+                >
+                  🔗
+                </button>
+                <button
+                  onclick="window.open('https://www.facebook.com/sharer/sharer.php?u=http://24.199.113.101/projects/resotica/','_blank')"
+                >
+                  f
+                </button>
+                <button
+                  onclick="window.open('https://twitter.com/intent/tweet?url=http://24.199.113.101/projects/resotica/','_blank')"
+                >
+                  t
+                </button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+                         <!-- Project  -->
+        <div class="project-card">
+          <img src="img/snyect.png" alt="Synnect Global" class="project-image" />
+          <div class="project-content">
+            <div class="project-title">Synnect Global</div>
+            <div class="project-type">Informative + Admin Dashboard</div>
+            <div class="project-buttons">
+              <a href="http://24.199.113.101/projects/synnectglobal/" target="_blank">Live</a>
+              <div class="share-buttons">
+                <button
+                  onclick="navigator.clipboard.writeText('http://24.199.113.101/projects/synnectglobal/')"
+                >
+                  🔗
+                </button>
+                <button
+                  onclick="window.open('https://www.facebook.com/sharer/sharer.php?u=http://24.199.113.101/projects/synnectglobal/','_blank')"
+                >
+                  f
+                </button>
+                <button
+                  onclick="window.open('https://twitter.com/intent/tweet?url=http://24.199.113.101/projects/synnectglobal/','_blank')"
+                >
+                  t
+                </button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
         <!-- Project 4 -->
         <div class="project-card">
           <img src="img/anc.png" alt="Arora Neuro" class="project-image" />
@@ -713,6 +924,7 @@
     </div>
   </body>
 </html>
+
 
 
 
