--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@
   <body>
     <div class="container">
       <h1>Akshay Tamrakar</h1>
-      <p class="subheading">Full Stack Web Developer & IT Engineer</p>
+      <p class="subheading">Senior PHP Web Developer & IT Engineer</p>
 
       <p class="contact">
         <strong>Email:</strong> akshay.tamrakar.se@gmail.com &nbsp; | &nbsp;
@@ -294,13 +294,13 @@
       <!-- SUMMARY -->
       <h2>Professional Summary</h2>
       <p>
-        A highly skilled and results-driven Full Stack Web Developer with over
+        A highly skilled and results-driven Senior PHP Web Developer with over
         <b>7 years of experience in the tech industry</b>, including<b>
           5 years of expertise in coding</b
         >. Proficient in backend development, cloud operations, API engineering,
         Android development, and IT infrastructure management. Adept at building
         scalable, secure, and performance-optimized web applications.
-        Experienced in using modern technologies such as PHP, MySQL, Laravel,
+        Experienced in using modern technologies such as PHP 8, MySQL, Laravel,
         CodeIgniter, and frontend tools to deliver high-quality solutions. Known
         for managing healthcare CRMs, enterprise dashboards, and cloud-based ERP
         systems. Strong problem-solving skills and a commitment to delivering
@@ -312,7 +312,7 @@
       
       <b>Web Development</b>
       <div class="tags">
-        <span>PHP</span>
+        <span>PHP 8</span>
         <span>Core PHP</span>
         <span>CodeIgniter</span>
         <span>Laravel</span>
@@ -715,6 +715,7 @@
     </div>
   </body>
 </html>
+
 
 
 
