--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@
   <body>
     <div class="container">
       <h1>Akshay Tamrakar</h1>
-      <p class="subheading">Senior PHP Web Developer & IT Engineer</p>
+      <p class="subheading">Senior Web Developer & IT Engineer</p>
 
       <p class="contact">
         <strong>Email:</strong> akshay.tamrakar.se@gmail.com &nbsp; | &nbsp;
@@ -294,7 +294,7 @@
       <!-- SUMMARY -->
       <h2>Professional Summary</h2>
       <p>
-        A highly skilled and results-driven Senior PHP Web Developer with over
+        A highly skilled and results-driven Senior Web Developer with over
         <b>7 years of experience in the tech industry</b>, including<b>
           5 years of expertise in coding</b
         >. Proficient in backend development, cloud operations, API engineering,
@@ -715,6 +715,7 @@
     </div>
   </body>
 </html>
+
 
 
 
